exports[`(.not).toHaveMethodNotAllowedStatus > using axios > .not.toHaveMethodNotAllowedStatus > fails when response have status code 405 1`] = `
<dim>expect(</intensity><red>received</color><dim>).not.toHaveMethodNotAllowedStatus()</intensity>

Expected status code to not be 405 received:
  <red>405</color>

------------
response is:
{
  "url": "http://127.0.0.1:54607/status",
  "status": 405,
  "headers": {
    "content-type": "application/json; charset=utf-8",
    "content-length": "2",
    "connection": "keep-alive"
  },
  "body": {}
}
`;

exports[`(.not).toHaveMethodNotAllowedStatus > using axios > .toHaveMethodNotAllowedStatus > fails when response have other status code 1`] = `
<dim>expect(</intensity><red>received</color><dim>).toHaveMethodNotAllowedStatus()</intensity>

Expected status code to be 405 received:
  <red>200</color>

------------
response is:
{
  "url": "http://127.0.0.1:54607/status",
  "status": 200,
  "headers": {
    "content-type": "application/json; charset=utf-8",
    "content-length": "2",
    "connection": "keep-alive"
  },
  "body": {}
}
`;

exports[`(.not).toHaveMethodNotAllowedStatus > using got > .not.toHaveMethodNotAllowedStatus > fails when response have status code 405 1`] = `
<dim>expect(</intensity><red>received</color><dim>).not.toHaveMethodNotAllowedStatus()</intensity>

Expected status code to not be 405 received:
  <red>405</color>

------------
response is:
{
  "url": "http://127.0.0.1:54607/status",
  "status": 405,
  "headers": {
    "content-type": "application/json; charset=utf-8",
    "content-length": "2",
    "connection": "keep-alive"
  },
  "body": "{}"
}
`;

exports[`(.not).toHaveMethodNotAllowedStatus > using got > .toHaveMethodNotAllowedStatus > fails when response have other status code 1`] = `
<dim>expect(</intensity><red>received</color><dim>).toHaveMethodNotAllowedStatus()</intensity>

Expected status code to be 405 received:
  <red>200</color>

------------
response is:
{
  "url": "http://127.0.0.1:54607/status",
  "status": 200,
  "headers": {
    "content-type": "application/json; charset=utf-8",
    "content-length": "2",
    "connection": "keep-alive"
  },
  "body": "{}"
}
`;
